Fixed request#show spacing + layout

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -27,7 +27,7 @@
 .tall-card {
   background-color: #EDE9E1;
   box-shadow: 4px 4px 4px #bfbfbf;
-  height: 100%;
+  border-radius: 8px;
 }
 
 .offer-card {
